# Python_Projetos

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE.md  Makefile  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  docker-compose.yml  install.bat  pyproject.toml  requirements.txt  start.bat
.github/workflows/: ci.yml
app/: crud.py  database.py  main.py  models.py  schemas.py  security.py
app/routes/: auth.py  manutencoes.py  planos.py  usuarios.py  veiculos.py  veiculos_planos.py
app/static/: app.js  auth.js  manutencao.js  manutencao_report.js  nav.js  plano.js  plano_list.js  registro.js  styles.css  veiculo.js  veiculo_list.js  veiculo_plano.js
app/templates/: base.html  dashboard.html  index.html  login.html  manutencao_form.html  manutencao_report.html  plano_form.html  plano_list.html  registro.html  veiculo_form.html  veiculo_list.html  veiculo_plano.html
docs/: API.md  API_GUIDE.md  CONTRIBUTING.md  GIT_COMMANDS.md  MANUAL_USUARIO.md  SECURITY.md
scripts/: check_login_local.py  debug_auth.py  descobrir_banco.py  list_users.py  recriar_tabela_planos.py
tests/: conftest.py  test_main.py  test_usuarios.py  test_veiculos.py
